--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "gulp-webserver": "^0.9.1",
+    "string-loader": "0.0.1",
     "vinyl-named": "^1.1.0"
   },
   "scripts": {
